2004-??-??	Michael Lauer		<mickey@Vanille.de>

	* Added sanity check isPresent(interface) before starting the engine.
	* Added a View submenu. Added actions to expand and collapse all items.
	* Switched to a (hopefully) more reliable method reading from gpsd.
	* Added parsing of named ProbeRequests. Display only-probed-yet SSIDs in a different network color.
	* Rewrote the simple actions on new {Network, Client, Station}. Besides playing a sound or
	  blinking a LED, a user customizable script can now be executed, if something has been
	  detected. This opens up many possibilities, i.e. a qcop to qpegps or exec'ing flite (speech).
	* Added decloaking of cloaked ESSIDs (length != 0, but essid[0] == \0).
	* Hided the 'Parse' Tab in the configuration window. Not functional now and may come later
	* Added parsing of control frames. Display stations sending them SSID "<unknown>" for now.
	* Added command line option "-nocheck" to skip non-root and dhcp tests.
	* Improved the speed of and user feedback during reading the manufacturer list.
	* GPS coordinates are now presented in the DMS (as opposed to decimal) format.

2003-12-18	Michael Lauer		<mickey@Vanille.de>

	* Released as Version 1.0.2 (Development Snapshot)
	* Added automatic uploading of capture files to "The Capture Dump" site at
	  http://www.Vanille.de/projects/capturedump.spy
	* Initial reading of the manufacturer database happens now in background
	* Removed deprecated setMonitorMode() API ==> Use setMode( "monitor" ) now.
	  The monitor mode now tries to use the standard IW_MODE_MONITOR first. If that
	  doesn't work, it falls back to using the proprietary iwpriv commands

2003-11-30	Michael Lauer		<mickey@Vanille.de>

	* Released as Version 1.0.1 (Development Snapshot)
	* Fixed ARP decoding for wired networks.
	  Interestingly, 802.11 encapsulates these in IP packets, while wired ethernet just tags the type_of_protocol.
	* Added reading GPS data from a gps daemon.